Bugfix, small screen project page overflow-x width

--- a/src/assets/sass/_components/_components.screen.scss
+++ b/src/assets/sass/_components/_components.screen.scss
@@ -67,7 +67,9 @@ $scherm-project-height: 110vh;
   }
 
   .layout {
-    display: table;
+    display: inline-block;
+
+    width: 100%;
     height: $scherm-project-height;
   }
 }
